# fireworks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: fire.hpp  flower.hpp  runner.hpp  words.hpp
src/: fire.cpp  flower.cpp  runner.cpp  words.cpp
